chore: add new funtionality for create price
